--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ a:hover {
   background: #df9995;
 }
 
+.icon-menu {
+  place-self: center;
+}
+
 /* Input de busca */
 .input-wrapper {
   position: relative;
@@ -480,10 +484,10 @@ ul li:hover {
 .info-flex {
   display: flex;
   flex-wrap: nowrap;
-  gap: 60px;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 50px;
   overflow-x: auto;
-  margin: 30px 90px;
+  margin: 30px 0px;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -519,5 +523,12 @@ ul li:hover {
 @media (max-width: 768px) {
   .promoções {
     margin-top: 215px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .info-flex {
+    padding: 0px 25px;
+    justify-content: space-between;
   }
 }
